Changes in component and add comments in code where required

--- a/react-project/src/index.scss
+++ b/react-project/src/index.scss
@@ -14,12 +14,12 @@ body {
 }
 
 h2 {
-  color: white;
+  color: #ffff;
 }
 
 .content-center {
   text-align: center;
-  color: white;
+  color: #ffff;
   margin-top: 20%;
 
   .error {
