--- a/react-project/src/index.scss
+++ b/react-project/src/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import "../src/styles/variable";
 
 $secondary: #1b2631;
 $border: #8d99ae;
@@ -50,4 +51,48 @@ h2 {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.4);
   background-color: #1b2631;
   border-radius: 10px;
+}
+
+.wrapper-button {
+  text-align: center;
+  margin-top: 15px;
+
+  button {
+    cursor: pointer;
+    padding: 0.8em 1.8em;
+    border: 2px solid $primary-color;
+    position: relative;
+    overflow: hidden;
+    background-color: $primary-color;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    transition: $transition-speed;
+    z-index: 1;
+    font-family: inherit;
+    color: $text-color;
+    font-weight: 700;
+
+    &:before {
+      content: "";
+      width: 0;
+      height: 300%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(45deg);
+      background: $secondary-color;
+      transition: 0.5s ease;
+      display: block;
+      z-index: -1;
+    }
+
+    &:hover:before {
+      width: 105%;
+    }
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
 }
